# metric-test-proxy

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
ai_code_testing/: functional_testing.py
archive/: dataset_cleanup.py
classifiers/: classifiers.py  enum.py  run_classifiers.py
metric_measurement/: dataset_cleanup.py  enum.py  textual_metrics.py
notebooks/: README.md
notebooks/logreg_demo/: logistic_regression.ipynb
notebooks/metrics_demo/: bleu.ipynb  chrf.ipynb  code_bleu.ipynb  meteor.ipynb  rouge.ipynb
pathing/: get_path.py
src/metric_test_proxy/: cli.py
src/metric_test_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/metric_test_proxy/ai_code_testing/: functional_testing.py
src/metric_test_proxy/classifiers/: enum.py  run_classifiers.py
src/metric_test_proxy/extraction/: script.py
src/metric_test_proxy/metric_measurement/: enum.py  textual_metrics.py
src/metric_test_proxy/pathing/: get_path.py
