[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metric-test-proxy"
version = "0.1.2"
description = "CLI for code similarity experiments: using textual similarity metrics as AI-code test pre-filtering mechanism."
readme = 'README.md'
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sergiu Mocanu", email = "sergiu.mocanu10@outlook.com" }
]
dependencies = [
	"pandas",
	"evaluate",
	"datasets>=3.6.0",
	"rouge-score",
	"sacrebleu",
	"codebleu",
	"tree-sitter-python>=0.21",
    "crystalbleu",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "nltk>=3.9.1",
    "typer"
]

[project.scripts]
metric-test = "metric_test_proxy.cli:app"
